// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`markdownNodeDiffToBlockOperations > add sentence at start 1`] = `
[
  {
    "blocks": [
      {
        "children": [],
        "content": [
          {
            "styles": {},
            "text": "test",
            "type": "text",
          },
        ],
        "id": "1",
        "props": {
          "backgroundColor": "default",
          "textAlignment": "left",
          "textColor": "default",
        },
        "type": "paragraph",
      },
    ],
    "position": "before",
    "referenceId": "0",
    "type": "add",
  },
]
`;

exports[`markdownNodeDiffToBlockOperations > add word at end of sentence 1`] = `
[
  {
    "block": {
      "content": [
        {
          "styles": {},
          "text": "hello world",
          "type": "text",
        },
      ],
    },
    "id": "0",
    "type": "update",
  },
]
`;

exports[`markdownNodeDiffToBlockOperations > change type 1`] = `
[
  {
    "blocks": [
      {
        "children": [],
        "content": [
          {
            "styles": {},
            "text": "hello",
            "type": "text",
          },
        ],
        "id": "1",
        "props": {
          "backgroundColor": "default",
          "level": 1,
          "textAlignment": "left",
          "textColor": "default",
        },
        "type": "heading",
      },
    ],
    "position": "before",
    "referenceId": "0",
    "type": "add",
  },
  {
    "id": "0",
    "type": "delete",
  },
]
`;

exports[`markdownNodeDiffToBlockOperations > complex change 1 1`] = `
[
  {
    "blocks": [
      {
        "children": [],
        "content": [
          {
            "styles": {},
            "text": "prefix",
            "type": "text",
          },
        ],
        "id": "3",
        "props": {
          "backgroundColor": "default",
          "textAlignment": "left",
          "textColor": "default",
        },
        "type": "paragraph",
      },
    ],
    "position": "before",
    "referenceId": "0",
    "type": "add",
  },
  {
    "block": {
      "content": [
        {
          "styles": {},
          "text": "hello",
          "type": "text",
        },
      ],
      "props": {
        "level": 2,
      },
    },
    "id": "0",
    "type": "update",
  },
  {
    "id": "1",
    "type": "delete",
  },
]
`;
